replace formatted